fix description id spacing in sass

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -123,7 +123,7 @@ $menuBorder: #535353;
 #description {
   font-size: 23px;
   line-height: 1.3em;
-  margin-bottom: 0;
+  margin-bottom: 10px;;
 }
 
 
